--- a/projects/icc/form-field/src/input/_input.component.theme.scss
+++ b/projects/icc/form-field/src/input/_input.component.theme.scss
@@ -11,7 +11,7 @@
 
     &:focus {
       outline: none;
-      background-color: icc-theme(input-focus-background-color);
+      //background-color: icc-theme(input-focus-background-color);
     }
 
     &.appearance-ghost {
