--- a/projects/icc/form-field/src/_form-field.component.theme.scss
+++ b/projects/icc/form-field/src/_form-field.component.theme.scss
@@ -5,9 +5,10 @@
     }
 
     .icc-form-field-container {
-      margin-bottom: 2px;
-      border-bottom: 1px solid;
-      border-color: icc-theme(checkbox-hover-border-color);
+      //margin-bottom: 2px;
+      //padding-bottom: 2px;
+      // border-bottom: 1px solid;
+      // border-color: icc-theme(checkbox-hover-border-color);
       //background-color: icc-theme(icc-grid-row-hover-background-color);
     }
   }
