--- a/projects/icc/grid/src/_grid.component.theme.scss
+++ b/projects/icc/grid/src/_grid.component.theme.scss
@@ -36,7 +36,8 @@
       height: 30px;
     }
 
-    icc-text-filter {
+    icc-text-filter,
+    icc-select-filter {
       border-top: 1px solid icc-theme(border-basic-color-1);
     }
 
