--- a/projects/icc/grid/src/components/column-filter/text/text-filter.component.html
+++ b/projects/icc/grid/src/components/column-filter/text/text-filter.component.html
@@ -1,4 +1,14 @@
-<div class="icc-text-filter">
+<icc-text-field
+  [fieldName]="column.name"
+  [value]="value"
+  [placeholder]="filterPlaceholder"
+  (valueChange)="onValueChange($event)"
+>
+</icc-text-field>
+<!--
+
+
+  <div class="icc-text-filter">
   <input
     type="text"
     [value]="value"
@@ -8,7 +18,6 @@
     placeholder="{{ filterPlaceholder }}"
   />
 </div>
-<!--
 
 <mat-form-field *ngIf="filterType" [ngClass]="'sun-grid-form-field'" [ngStyle]="{'height': rowHeight+'px'}">
   <input matInput type="text" [value]="value" autocomplete="off"
