--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -4,12 +4,13 @@
     <div (click)="toggleTheme()">Toggle Theme</div>
     <icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
     <icc-select-field
+      fieldName="test"
       [selectOnly]="false"
       [multiSelection]="false"
       [value]="states[16]"
       [options]="states"
-      title="state"
-      name="abbr"
+      optionLabel="state"
+      optionKey="abbr"
     ></icc-select-field>
   </icc-layout-header>
 
