--- a/projects/icc/form-field/src/form-field.component.scss
+++ b/projects/icc/form-field/src/form-field.component.scss
@@ -1,6 +1,6 @@
 .icc-form-field {
-  margin-top: 0.125rem;
-  margin-bottom: 0.125rem;
+  //margin-top: 0.125rem;
+  //margin-bottom: 0.125rem;
   padding-left: 10px;
   padding-right: 10px;
   position: relative;
