--- a/projects/icc/form-field/src/input/_input.component.theme.scss
+++ b/projects/icc/form-field/src/input/_input.component.theme.scss
@@ -3,7 +3,7 @@
     height: 1.75rem;
     //border-width: 0 0 1px 0;
     border: none;
-    padding: 0 0.375rem;
+    //padding: 0 0.375rem;
 
     &.input-full-width {
       width: 100%;
