--- a/projects/icc/form-field/src/fields/select-field/select-field.component.scss
+++ b/projects/icc/form-field/src/fields/select-field/select-field.component.scss
@@ -1,12 +1,14 @@
 :host {
-  icc-icon {
-    padding-left: 5px;
-    font-size: 12px;
-    cursor: pointer;
-  }
+  icc-form-field {
+    input {
+      width: 100%;
+      text-overflow: ellipsis;
+    }
 
-  input {
-    width: 100%;
-    text-overflow: ellipsis;
+    icc-icon {
+      padding-left: 5px;
+      font-size: 12px;
+      cursor: pointer;
+    }
   }
 }
