add select demos

--- a/projects/icc/form-field/src/fields/select-field/select-field.component.html
+++ b/projects/icc/form-field/src/fields/select-field/select-field.component.html
@@ -8,7 +8,7 @@
         iccInput
         type="text"
         autocomplete="off"
-        [readonly]="fieldConfig.selectOnly"
+        [readonly]="!!fieldConfig.selectOnly"
         [formControlName]="fieldConfig.fieldName"
         (isOverlayOpen)="overlayOpen($event)"
         (change)="onChange($event)"
