--- a/projects/icc/menu/src/components/menu-item/menu-item.component.scss
+++ b/projects/icc/menu/src/components/menu-item/menu-item.component.scss
@@ -8,6 +8,10 @@
     width: 100%;
   }
 
+  icc-checkbox {
+    width: 100%;
+  }
+
   .icc-menu-title {
     //display: inline-block;
     //align-items: center;
