add select demos

--- a/projects/icc-demo/src/app/examples/select/simple-select/simple-select.component.html
+++ b/projects/icc-demo/src/app/examples/select/simple-select/simple-select.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="multi-selection">
-  <icc-select-field [fieldConfig]="multiSelection" [value]="states[16]" [options]="states"></icc-select-field>
+  <icc-select-field [fieldConfig]="multiSelection" [value]="[states[16]]" [options]="states"></icc-select-field>
 </div>
 
 <div class="single-autocomplete">
@@ -11,5 +11,5 @@
 </div>
 
 <div class="multi-autocomplete">
-  <icc-select-field [fieldConfig]="multiAutocomplete" [value]="states[16]" [options]="states"></icc-select-field>
+  <icc-select-field [fieldConfig]="multiAutocomplete" [value]="[states[16]]" [options]="states"></icc-select-field>
 </div>
