--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -10,12 +10,10 @@
   <icc-layout-sidebar>
     <icc-accordion [items]="items"></icc-accordion>
 
-    <!--
-    <icc-checkbox [checked]="true" [disabled]="true" (change)="onCheckboxChange($event)">
+    <icc-checkbox [checked]="true" [disabled]="false" (change)="onCheckboxChange($event)">
       <icc-icon config="exclamation-circle"></icc-icon>
       <span> Test Checkbox </span>
     </icc-checkbox>
-        -->
   </icc-layout-sidebar>
 
   <icc-layout-center>
