--- a/projects/icc/checkbox/src/checkbox.component.html
+++ b/projects/icc/checkbox/src/checkbox.component.html
@@ -1,4 +1,4 @@
-<div class="form-field-checkbox" (click)="_preventBubblingFromLabel($event)">
+<div class="form-field-checkbox" (click)="preventBubbling($event)">
   <input
     #input
     type="checkbox"
@@ -6,41 +6,9 @@
     [checked]="checked"
     [disabled]="disabled"
     [indeterminate]="indeterminate"
-    (click)="_onInputClick($event)"
-    (change)="_onInteractionEvent($event)"
+    (click)="onInputClick($event)"
+    (change)="onChangeEvent($event)"
   />
-  <!--
-
-             [checked]="checked"
-           [indeterminate]="indeterminate"
-           [disabled]="disabled"
-           [id]="inputId"
-           [required]="required"
-           [tabIndex]="tabIndex"
-           (blur)="_onBlur()"
-           (click)="_onInputClick()"
-           (change)="_onInteractionEvent($event)"/>
-
-               (change)="updateValueAndIndeterminate($event)"
-    (click)="$event.stopPropagation()"
-
-    (click)="$event.stopPropagation()"
-  <span class="icc-checkbox-container">
-    <icc-icon *ngIf="indeterminate" icon="minus"></icc-icon>
-    <icc-icon [ngClass]="checked? 'checked': ''" *ngIf="!indeterminate" icon="check"></icc-icon>
-  </span>
-
-    <label class="mdc-label"
-         #label
-         [for]="inputId">
-    <ng-content></ng-content>
-  </label>
-
-    <span class="icc-checkbox-label" (click)="$event.stopPropagation()">
-    <ng-content></ng-content>
-  </span>
-
-      -->
   <label #label class="icc-checkbox-label">
     <ng-content></ng-content>
   </label>
