--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -4,7 +4,11 @@
     <div (click)="toggleTheme()">Toggle Theme</div>
     <icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
 
-    <icc-select-field [fieldConfig]="fieldConfig" [value]="states[16]" [options]="states"></icc-select-field>
+    <!--
+
+
+    <icc-select-field [fieldConfig]="fieldConfig" [value]="[states[16]]" [options]="states"></icc-select-field>
+        -->
   </icc-layout-header>
 
   <icc-layout-sidebar>
