--- a/projects/icc-demo/src/app/examples/select/simple-select/simple-select.component.scss
+++ b/projects/icc-demo/src/app/examples/select/simple-select/simple-select.component.scss
@@ -3,19 +3,7 @@
   flex-direction: column;
   width: 100%;
 
-  .single-selection {
-    width: 600px;
-  }
-
-  .multi-selection {
-    width: 600px;
-  }
-
-  .single-autocomplete {
-    width: 600px;
-  }
-
-  .multi-autocomplete {
+  div {
     width: 600px;
   }
 }
