select remote options

--- a/projects/icc-demo/src/app/examples/select/simple-select/simple-select.component.html
+++ b/projects/icc-demo/src/app/examples/select/simple-select/simple-select.component.html
@@ -21,7 +21,7 @@
   ></icc-select-field>
   <icc-select-field
     [fieldConfig]="multiSelectionList"
-    [value]="singleListState"
+    [value]="multiListStates"
     [options]="listStates"
   ></icc-select-field>
   <icc-select-field
@@ -31,7 +31,7 @@
   ></icc-select-field>
   <icc-select-field
     [fieldConfig]="multiAutocompleteList"
-    [value]="singleListState"
+    [value]="multiListStates"
     [options]="listStates"
   ></icc-select-field>
 </div>
