--- a/projects/icc-demo/src/app/examples/select/simple-select/simple-select.component.html
+++ b/projects/icc-demo/src/app/examples/select/simple-select/simple-select.component.html
@@ -1,47 +1,55 @@
 <div>
-  Local field config and local object options
-  <icc-select-field [fieldConfig]="singleSelection" [value]="singleObjectState" [options]="states"></icc-select-field>
-  <icc-select-field [fieldConfig]="multiSelection" [value]="multiObjectStates" [options]="states"></icc-select-field>
-  <icc-select-field
-    [fieldConfig]="singleAutocomplete"
-    [value]="singleObjectState"
-    [options]="states"
-  ></icc-select-field>
-  <icc-select-field [fieldConfig]="multiAutocomplete" [value]="multiObjectStates" [options]="states"></icc-select-field>
+  <div><br /></div>
+  <div>
+    Local field config and local object options
+    <icc-select-field [fieldConfig]="singleSelection" [value]="singleObjectState" [options]="states"></icc-select-field>
+    <icc-select-field [fieldConfig]="multiSelection" [value]="multiObjectStates" [options]="states"></icc-select-field>
+    <icc-select-field
+      [fieldConfig]="singleAutocomplete"
+      [value]="singleObjectState"
+      [options]="states"
+    ></icc-select-field>
+    <icc-select-field
+      [fieldConfig]="multiAutocomplete"
+      [value]="multiObjectStates"
+      [options]="states"
+    ></icc-select-field>
+  </div>
+
+  <div><br /></div>
+
+  <div>
+    Local field config and remote object options
+    <icc-select-field [fieldConfig]="singleSelectionRemote" [value]="singleObjectState"></icc-select-field>
+    <icc-select-field [fieldConfig]="multiSelectionRemote" [value]="multiObjectStates"></icc-select-field>
+    <icc-select-field [fieldConfig]="singleAutocompleteRemote" [value]="singleObjectState"></icc-select-field>
+    <icc-select-field [fieldConfig]="multiAutocompleteRemote" [value]="multiObjectStates"></icc-select-field>
+  </div>
 </div>
 
-<div><br /></div>
-
 <div>
-  Local field config and local list options (non-object) TODO need test mutiple value
-  <icc-select-field
-    [fieldConfig]="singleSelectionList"
-    [value]="singleListState"
-    [options]="listStates"
-  ></icc-select-field>
-  <icc-select-field
-    [fieldConfig]="multiSelectionList"
-    [value]="multiListStates"
-    [options]="listStates"
-  ></icc-select-field>
-  <icc-select-field
-    [fieldConfig]="singleAutocompleteList"
-    [value]="singleListState"
-    [options]="listStates"
-  ></icc-select-field>
-  <icc-select-field
-    [fieldConfig]="multiAutocompleteList"
-    [value]="multiListStates"
-    [options]="listStates"
-  ></icc-select-field>
-</div>
-
-<div><br /></div>
-
-<div>
-  Local field config and remote object options
-  <icc-select-field [fieldConfig]="singleSelectionRemote" [value]="singleObjectState"></icc-select-field>
-  <icc-select-field [fieldConfig]="multiSelectionRemote" [value]="multiObjectStates"></icc-select-field>
-  <icc-select-field [fieldConfig]="singleAutocompleteRemote" [value]="singleObjectState"></icc-select-field>
-  <icc-select-field [fieldConfig]="multiAutocompleteRemote" [value]="multiObjectStates"></icc-select-field>
+  <div><br /></div>
+  <div>
+    Local field config and local list options (non-object) TODO need test mutiple value
+    <icc-select-field
+      [fieldConfig]="singleSelectionList"
+      [value]="singleListState"
+      [options]="listStates"
+    ></icc-select-field>
+    <icc-select-field
+      [fieldConfig]="multiSelectionList"
+      [value]="multiListStates"
+      [options]="listStates"
+    ></icc-select-field>
+    <icc-select-field
+      [fieldConfig]="singleAutocompleteList"
+      [value]="singleListState"
+      [options]="listStates"
+    ></icc-select-field>
+    <icc-select-field
+      [fieldConfig]="multiAutocompleteList"
+      [value]="multiListStates"
+      [options]="listStates"
+    ></icc-select-field>
+  </div>
 </div>
