select remote config

--- a/projects/icc-demo/src/app/examples/select/simple-select/simple-select.component.html
+++ b/projects/icc-demo/src/app/examples/select/simple-select/simple-select.component.html
@@ -29,9 +29,9 @@
   <div>
     Remote field config and remote object options
     <icc-select-field [fieldConfig]="singleRemote" [value]="singleObjectState"></icc-select-field>
-
+    <icc-select-field [fieldConfig]="multiRemote" [value]="multiObjectStates"></icc-select-field>
     <!--
-    <icc-select-field [fieldConfig]="multiSelectionRemote" [value]="multiObjectStates"></icc-select-field>
+
     <icc-select-field [fieldConfig]="singleAutocompleteRemote" [value]="singleObjectState"></icc-select-field>
     <icc-select-field [fieldConfig]="multiAutocompleteRemote" [value]="multiObjectStates"></icc-select-field>
         -->
