--- a/projects/icc-demo/src/app/examples/select/simple-select/simple-select.component.html
+++ b/projects/icc-demo/src/app/examples/select/simple-select/simple-select.component.html
@@ -30,11 +30,8 @@
     Remote field config and remote object options
     <icc-select-field [fieldConfig]="singleRemote" [value]="singleObjectState"></icc-select-field>
     <icc-select-field [fieldConfig]="multiRemote" [value]="multiObjectStates"></icc-select-field>
-    <!--
-
-    <icc-select-field [fieldConfig]="singleAutocompleteRemote" [value]="singleObjectState"></icc-select-field>
-    <icc-select-field [fieldConfig]="multiAutocompleteRemote" [value]="multiObjectStates"></icc-select-field>
-        -->
+    <icc-select-field [fieldConfig]="singleAutocompleteRemotes" [value]="singleObjectState"></icc-select-field>
+    <icc-select-field [fieldConfig]="multiAutocompleteRemotes" [value]="multiObjectStates"></icc-select-field>
   </div>
 </div>
 
