--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -3,7 +3,7 @@
     Top Nav Bar
     <div (click)="toggleTheme()">Toggle Theme</div>
     <icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
-
+    <icc-select-field [fieldConfig]="multiAllRemoteList" [value]="multiListStates"></icc-select-field>
     <!--
 
 
@@ -14,10 +14,13 @@
   <icc-layout-sidebar>
     <icc-accordion [items]="items"></icc-accordion>
 
+    <!--
+
     <icc-checkbox [checked]="true" [disabled]="false" (change)="onCheckboxChange($event)">
       <icc-icon config="exclamation-circle"></icc-icon>
       <span> Test Checkbox </span>
     </icc-checkbox>
+        -->
   </icc-layout-sidebar>
 
   <icc-layout-center>
