--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -14,6 +14,7 @@
   <icc-layout-sidebar>
     <icc-accordion [items]="items"></icc-accordion>
 
+    <icc-form-panel></icc-form-panel>
     <!--
 
     <icc-checkbox [checked]="true" [disabled]="false" (change)="onCheckboxChange($event)">
