--- a/projects/icc/grid/src/components/column-filter/text/text-filter.component.html
+++ b/projects/icc/grid/src/components/column-filter/text/text-filter.component.html
@@ -1,7 +1,1 @@
-<icc-text-field
-  [fieldName]="column.name"
-  [value]="value"
-  [placeholder]="filterPlaceholder"
-  (valueChange)="onValueChange($event)"
->
-</icc-text-field>
+<icc-text-field [fieldConfig]="fieldConfig" [value]="value" (valueChange)="onValueChange($event)"> </icc-text-field>
