--- a/projects/icc/form-panel/src/form-panel.component.html
+++ b/projects/icc/form-panel/src/form-panel.component.html
@@ -1,1 +1,1 @@
-<icc-form-panel-view [fields]="fields" [values]="values"></icc-form-panel-view>
+<icc-form-panel-view [fieldConfigs]="fieldConfigs" [values]="values"></icc-form-panel-view>
