--- a/projects/icc/form/src/form.component.html
+++ b/projects/icc/form/src/form.component.html
@@ -1,3 +1,5 @@
 <ng-container *ngIf="formConfig$ | async as formConfig">
-  <icc-form-view [formConfig]="formConfig" [formFields]="formFields" [values]="values"> </icc-form-view>
+  <ng-container *ngIf="formFieldsConfig$ | async as formFields">
+    <icc-form-view [formConfig]="formConfig" [formFields]="formFields" [values]="values"> </icc-form-view>
+  </ng-container>
 </ng-container>
