--- a/projects/icc-demo/src/app/examples/form/demos/simple-form.component.html
+++ b/projects/icc-demo/src/app/examples/form/demos/simple-form.component.html
@@ -1,3 +1,5 @@
+<!--
+
 <fieldset>
   <legend>Local form config, fields and values</legend>
   <icc-form [formConfig]="formConfig" [formFields]="formFields" [values]="values"></icc-form>
@@ -16,4 +18,15 @@
 <fieldset>
   <legend>Remote form fields and values</legend>
   <icc-form [formConfig]="remoteFormFieldsAndValues"></icc-form>
+</fieldset>
+-->
+
+<fieldset>
+  <legend>Remote form fields and values</legend>
+  <icc-form [formConfig]="remoteFormFieldsAndValues"></icc-form>
+</fieldset>
+
+<fieldset>
+  <legend>All Remotes</legend>
+  <icc-form [formConfig]="allRemotes"></icc-form>
 </fieldset>
