--- a/projects/icc/d3/src/d3.component.html
+++ b/projects/icc/d3/src/d3.component.html
@@ -8,4 +8,4 @@
   [dispatch]="dispatch"
 >
 </icc-d3-legend>
-<span [iccPopover]="d3Popover" popoverType="point" style="display: none"></span>
+<span [iccPopover2]="d3Popover" popoverType="point" style="display: none"></span>
