--- a/projects/icc/d3/src/popover/popover.component.html
+++ b/projects/icc/d3/src/popover/popover.component.html
@@ -1,8 +1,9 @@
+<div>Test popover</div>
 <table>
-  <thead *ngIf="data.value !== null" style="text-align: left">
+  <thead *ngIf="data && data.value" style="text-align: left">
     <th colspan="3">{{ data.value }}</th>
   </thead>
-  <tbody>
+  <tbody *ngIf="data && data.series">
     <ng-container *ngFor="let item of data.series">
       <tr [ngClass]="item.hovered ? 'highlight' : ''">
         <td [ngStyle]="{ 'border-bottom-color': item.color, 'border-top-color': item.color }">
