--- a/projects/icc/d3/src/d3.component.html
+++ b/projects/icc/d3/src/d3.component.html
@@ -8,7 +8,12 @@
   [dispatch]="dispatch"
 >
 </icc-d3-legend>
-<span [iccPopover]="d3Popover" [iccPopoverTrigger]="trigger" [iccPopoverContext]="{ data: popoverContext }"></span>
+<span
+  [iccPopover]="d3Popover"
+  [iccPopoverTrigger]="trigger"
+  [iccPopoverPosition]="positopn"
+  [iccPopoverContext]="{ data: popoverContext }"
+></span>
 <!--
 
   style="display: none"
